welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: value && is not a member of Int
	if(getX()==((getMondeHauteur()-1) && getY() == (getMondeHauteur()-1))){true}else{false}
                                          ^ColumnByColumn:12: error: not found: value getPos
			getPos(c,l)
                        ^ColumnByColumn:14: error: not found: value getPos
		getPos(c,0)
                ^